# kernel

./: .gitignore  .kernel-mint.json  AUDIT_SUBMISSION.md  Anchor.toml  README.md  SECURITY.md  SECURITY_REVIEW.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yml
app/: next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/airdrop/: page.tsx
app/src/app/stake/: page.tsx
app/src/app/token/: page.tsx
app/src/components/: BurnTracker.tsx  FeeDashboard.tsx  LoadingSpinner.tsx  Navbar.tsx  StakingLeaderboard.tsx  WalletProvider.tsx
app/src/hooks/: useAirdrop.ts  useProgram.ts  useStaking.ts  useStakingActions.ts  useTokenData.ts
app/src/lib/: constants.ts  kernel_token.json
docs/: EMERGENCY_PROCEDURES.md  INVARIANTS.md  MULTISIG_SETUP.md  SETUP.md  THREAT_MODEL.md
programs/kernel-token/: Cargo.toml  keypair.json
programs/kernel-token/src/: lib.rs  property_tests.rs
scripts/: fee-harvester.ts  fresh-init.ts  initialize-program.ts  lp-manager.ts  send-test-tokens.ts  verify-deployment.ts
scripts/airdrop/: airdrop.ts
scripts/token/: burn-tokens.ts  create-mint.ts  distribute.ts  harvest-fees.ts  mint-tokens.ts
tests/: kernel-token.ts
