[package]
name = "kernel-token"
version = "0.1.0"
description = "$KERNEL Meme Coin - The Core of Crypto Security"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kernel_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
proptest = "=1.4.0"
